Update ProductList and ProductDetail

--- a/frontend/src/components/Config/Config.css
+++ b/frontend/src/components/Config/Config.css
@@ -11,7 +11,7 @@
 }
   .alert-info{
     color: #2020a0;
-    background-color:#e0e0ff ;
+    background-color:#f3f6ff ;
 }
   .alert-danger{
     color: #a02020;
