--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -846,375 +846,13 @@ h2 {
 /**********************************/
 /******** Product View CSS ********/
 /**********************************/
-.product-view {
-  position: relative;
-  width: 100%;
-  padding: 30px 0;
-}
-
-.product-view .product-view-top {
-  padding: 30px;
-  margin-bottom: 30px;
-  background: #ffffff;
-}
-
-.product-view .product-search {
-  position: relative;
-  width: 100%;
-}
-
-.product-view .product-search input {
-  width: 100%;
-  height: 35px;
-  padding: 0 15px;
-  color: #999999;
-  background: transparent;
-  border: 1px solid #353535;
-  border-radius: 4px;
-  transition: all .3s;
-}
-
-.product-view .product-search input:focus {
-  border-color: #FF6F61;
-}
-
-.product-view .product-search button {
-  position: absolute;
-  width: 35px;
-  height: 33px;
-  top: 1px;
-  right: 1px;
-  text-align: center;
-  background: transparent;
-  color: #353535;
-  border: none;
-  border-radius: 0 4px 4px 0;
-  transition: all .3s;
-}
-
-.product-view .product-search button i {
-  font-size: 16px;
-}
-
-.product-view .product-search button:hover {
-  background: #FF6F61;
-  color: #ffffff;
-}
-
-.product-view .product-short,
-.product-view .product-price-range {
-  position: relative;
-  width: 100%;
-  text-align: right;
-}
-
-.product-view .product-short .dropdown .dropdown-toggle,
-.product-view .product-price-range .dropdown .dropdown-toggle {
-  display: block;
-  width: 100%;
-  height: 35px;
-  padding: 5px 10px;
-  background: transparent;
-  border: 1px solid #353535;
-  text-align: left;
-  border-radius: 4px;
-  cursor: pointer;
-  transition: all .3s;
-}
-
-.product-view .product-short .dropdown .dropdown-toggle:hover,
-.product-view .product-price-range .dropdown .dropdown-toggle:hover {
-  color: #FF6F61;
-  border-color: #FF6F61;
-}
-
-.product-view .product-short .dropdown .dropdown-toggle::after,
-.product-view .product-price-range .dropdown .dropdown-toggle::after {
-  float: right;
-  margin-top: 10px;
-}
-
-.product-view .product-short .dropdown-menu,
-.product-view .product-price-range .dropdown-menu {
-  margin: -1px 0 0 0;
-  border-radius: 0;
-}
-
-.product-view .product-item {
-  margin-bottom: 30px;
-}
-
-.product-view .pagination {
-  margin: 0;
-}
-
-.product-view .pagination .page-item .page-link {
-  color: #353535;
-  background: transparent;
-  border-color: #353535;
-}
-
-.product-view .pagination .page-item:hover .page-link,
-.product-view .pagination .page-item.active .page-link {
-  color: #FF6F61;
-  background: #000000;
-}
-
-@media (max-width: 991.98px) {
-  .product-view .pagination {
-      margin-bottom: 30px;
-  }
-}
+@import url("./components/MainPages/Products/Product.css");
 
 
 /**********************************/
 /******* Product Detail CSS *******/
 /**********************************/
-.product-detail {
-  position: relative;
-  width: 100%;
-  padding: 30px 0;
-}
-
-.product-detail .product-detail-top,
-.product-detail .product-detail-bottom {
-  margin-bottom: 30px;
-}
-
-.product-detail .product-detail-top {
-  padding: 0;
-  background: #ffffff;
-}
-
-.product-detail .product-slider-single img {
-  width: 100%;
-}
-
-.product-detail .product-slider-single-nav {
-  margin: 15px 30px 30px 30px;
-  border: 3px double #FF6F61;
-}
-
-.product-detail .product-slider-single-nav .slider-nav-img {
-  border-right: 1px solid #FF6F61;
-  overflow: hidden;
-}
-
-.product-detail .product-slider-single-nav img {
-  width: 100%;
-  transition: all .3s;
-}
-
-.product-detail .product-slider-single-nav img:hover {
-  transform: scale(1.2);
-}
-
-.product-detail .product-content,
-.product-detail .product-content .title,
-.product-detail .product-content .ratting,
-.product-detail .product-content .price,
-.product-detail .product-content .details,
-.product-detail .product-content .quantity,
-.product-detail .product-content .action {
-  position: relative;
-  width: 100%;
-}
-
-.product-detail .product-content {
-  padding: 30px;
-}
-
-@media (min-width: 768px) {
-  .product-detail .product-content {
-      padding-left: 0;
-  }
-}
-
-.product-detail .product-content .title h2 {
-  font-size: 25px;
-  margin-bottom: 5px;
-}
-
-.product-detail .product-content .ratting {
-  margin-bottom: 10px;
-}
-
-.product-detail .product-content .ratting i {
-  color: #FF6F61;
-  font-size: 16px;
-}
-
-.product-detail .product-content .price,
-.product-detail .product-content .quantity,
-.product-detail .product-content .p-size,
-.product-detail .product-content .p-color {
-  margin-bottom: 15px;
-}
-
-.product-detail .product-content .price h4,
-.product-detail .product-content .quantity h4,
-.product-detail .product-content .p-size h4,
-.product-detail .product-content .p-color h4 {
-  display: inline-block;
-  width: 80px;
-  font-size: 18px;
-  font-weight: 700;
-  margin-right: 5px;
-}
-
-.product-detail .product-content .price p {
-  display: inline-block;
-  color: #FF6F61;
-  font-size: 30px;
-  font-weight: 700;
-  margin: 0;
-}
-
-.product-detail .product-content .price span {
-  color: #999999;
-  text-decoration: line-through;
-  margin-left: 12px;
-}
-
-.product-detail .product-content .quantity .qty {
-  display: inline-block;
-  font-size: 0;
-}
-
-.product-detail .product-content .quantity button {
-  width: 30px;
-  height: 30px;
-  padding: 2px 0;
-  font-size: 16px;
-  text-align: center;
-  color: #ffffff;
-  background: #FF6F61;
-  border: none;
-}
-
-.product-detail .product-content .quantity button.btn-minus {
-  border-radius: 4px 0 0 4px;
-}
-
-.product-detail .product-content .quantity button.btn-plus {
-  border-radius: 0 4px 4px 0;
-}
-
-.product-detail .product-content .quantity input {
-  width: 40px;
-  height: 30px;
-  color: #ffffff;
-  font-size: 16px;
-  text-align: center;
-  background: #000000;
-  border: none;
-}
-
-.product-detail .product-content .action a:first-child {
-  margin-right: 11px;
-}
-
-.product-detail .product-content .action a i {
-  margin-right: 5px;
-}
-
-.product-detail .nav.nav-pills .nav-link {
-  color: #FF6F61;
-  background: #000000;
-  border-radius: 0;
-  transition: all .3s;
-}
-
-.product-detail .nav.nav-pills .nav-link:hover,
-.product-detail .nav.nav-pills .nav-link.active {
-  color: #000000;
-  background: #FF6F61;
-}
-
-.product-detail .tab-content {
-  background: #ffffff;
-  padding: 25px 15px 15px 15px;
-}
-
-.product-detail .tab-content ul {
-  margin: 0;
-  padding: 0;
-  list-style: none;
-}
-
-.product-detail .tab-content ul li {
-  margin-bottom: 10px;
-}
-
-.product-detail .tab-content ul li::before {
-  content: '\f061';
-  font-family: 'Font Awesome 5 Free';
-  font-weight: 900;
-  padding-right: 5px;
-}
-
-.product-detail .tab-content .reviews-submitted {
-  position: relative;
-  margin-bottom: 45px;
-}
-
-.product-detail .tab-content .reviewer {
-  color: #FF6F61;
-  font-size: 18px;
-  font-weight: 600;
-}
-
-.product-detail .tab-content .reviewer span {
-  color: #666666;
-  font-size: 14px;
-  font-weight: 400;
-}
-
-.product-detail .tab-content .ratting {
-  color: #FF6F61;
-  margin-bottom: 15px;
-}
-
-.product-detail .tab-content .reviews-submit .ratting {
-  font-size: 24px;
-}
-
-.product-detail .tab-content .form input {
-  width: 100%;
-  height: 35px;
-  padding: 0 15px;
-  color: #666666;
-  border: 1px solid #dddddd;
-  border-radius: 4px;
-  margin-bottom: 15px;
-}
-
-.product-detail .tab-content .form textarea {
-  width: 100%;
-  height: 80px;
-  padding: 6px 15px;
-  color: #666666;
-  border: 1px solid #dddddd;
-  border-radius: 4px;
-  margin-bottom: 15px;
-}
-
-.product-detail .tab-content .form button {
-  display: inline-block;
-  height: 35px;
-  padding: 0 15px;
-  color: #FF6F61;
-  background: #ffffff;
-  border: 1px solid #FF6F61;
-  border-radius: 4px;
-  margin-bottom: 15px;
-  transition: all .3s;
-}
-
-.product-detail .tab-content .form button:hover {
-  color: #ffffff;
-  background: #FF6F61;
-}
+@import url("./components/MainPages/ProductDetails/ProductDetails.css");
 
 
 /**********************************/
