--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -173,48 +173,9 @@ tbody>tr:nth-child(odd){
   background-color: #f0f0f0;
 } */
 /* Checkout */
-/* @import url("./components/CheckOutStep/CheckoutSteps.css"); */
+@import url("./components/CheckOutStep/CheckoutSteps.css");
 /*Place order*/
-/* .placeorder{
-  display: flex;
-  flex-grow: warp;
-  padding : 1rem;
-  justify-content: space-between;
-}
-.placeorder-info{
-  flex: 3 1 60rem;
-}
-.placeorder-action{
-  flex: 1 1 20rem;
-  border: .1rem #c0c0c0 solid;
-  border-radius: .5rem;
-  background-color: #fcfcfc;
-  padding: 1rem;
-}
-.placeorder-info > div{
-  border: .1rem #c0c0c0 solid;
-  border-radius: .5rem;
-  background-color: #fcfcfc;
-  padding: 1rem;
-  margin: 1rem;
-}
-.placeorder-info > div:first-child{
-  margin-top: 0; 
-}
-.placeorder-action >ul{
-  padding: 0;
-  list-style-type: none;  
-}
-.placeorder-action >ul >li{
-  display: flex;
-  justify-content: space-between; 
-  margin-bottom: 1rem;
-}
-.placeorder-action >ul >li:last-child{
- font-size: 2rem;
- font-weight: bold;
- color:#a749ff; 
-} */
+@import url("./components/PlaceOrder/PlaceOrder.css");
 /* back to top**/
 @import url("./components/ScrollToTop/ScrollToTop.css");
 
@@ -246,13 +207,7 @@ tbody>tr:nth-child(odd){
   display: block;
 } */
 /* Alert*/
-/* .success{
-  color: #20a020;
-}
-.danger{
-  color:#a02020;
-}
- */
+
 /*form-profile*/
 @import url("./components/MainPages/ProfileUser/Profile.css");
 /*loading*/
@@ -1365,3 +1320,5 @@ h2 {
 /**********************************/
 @import url("./components/Footer/Footer.css");
 
+/*************404 page*******************/
+@import url("./components/404/404.css");
