--- a/frontend/src/components/MainPages/ProfileUser/Profile.css
+++ b/frontend/src/components/MainPages/ProfileUser/Profile.css
@@ -14,6 +14,7 @@ margin: 1rem;
 margin: 1rem 0;
 }
 .form-profile input {
+    background-color: #f3f6ff;
     display: block;
     margin: .8rem 1rem auto;
     border: none;
@@ -23,4 +24,7 @@ margin: 1rem 0;
 }
 .update-profile{
 margin-bottom: 2rem;
+}
+.form-profile button{
+    border-radius: 2rem;
 }
