Update Place order

--- a/frontend/src/components/forgot.password/forgot.password.css
+++ b/frontend/src/components/forgot.password/forgot.password.css
@@ -25,3 +25,7 @@ min-width: 20px;
 border: .1rem solid #FF6F61;
 margin-bottom: 1rem;
 }
+.forgotpass .otp-notify{
+    font-size: .8rem;
+    color: #696763;
+}
