--- a/frontend/src/components/PlaceOrder/PlaceOrder.css
+++ b/frontend/src/components/PlaceOrder/PlaceOrder.css
@@ -4,41 +4,59 @@
     padding : 1rem;
     justify-content: space-between;
   }
-  .placeorder-info{
-    flex: 3 1 60rem;
-  }
-  .placeorder-action{
-    flex: 1 1 20rem;
-    border: .1rem #c0c0c0 solid;
-    border-radius: .5rem;
-    background-color: #fcfcfc;
-    padding: 1rem;
-  }
-  .placeorder-info > div{
-    border: .1rem #c0c0c0 solid;
-    border-radius: .5rem;
-    background-color: #fcfcfc;
-    padding: 1rem;
-    margin: 1rem;
-  }
-  .placeorder-info > div:first-child{
-    margin-top: 0; 
-  }
-  .placeorder-action >ul{
-    padding: 0;
-    list-style-type: none;  
-  }
-  .placeorder-action >ul >li{
-    display: flex;
-    justify-content: space-between; 
-    margin-bottom: 1rem;
-  }
-  .placeorder-action >ul >li:last-child{
-   font-size: 2rem;
-   font-weight: bold;
-   color:#a749ff; 
-  }
-  .cart-list-container {
+.placeorder-info{
+  flex: 3 1 60rem;
+}
+.placeorder-action{
+  flex: 1 1 20rem;
+  border: .1rem #FF6F61 solid;
+  border-radius: .5rem;
+  background-color: #fff;
+  padding: 1rem;
+}
+.placeorder-info > div{
+  border: .1rem #FF6F61 solid;
+  border-radius: .5rem;
+  background-color: #fff;
+  padding: 1rem;
+  margin: 1rem;
+}
+.placeorder-info > div:first-child{
+  margin-top: 0; 
+}
+.placeorder-action >ul{
+  padding: 0;
+  list-style-type: none;  
+}
+.placeorder-action >ul >li{
+  display: flex;
+  justify-content: space-between; 
+  margin-bottom: 1rem;
+}
+.placeorder-action >ul >li:last-child{
+  font-size: 2rem;
+  font-weight: bold;
+  color:#ff6f61; 
+}
+.placeorder-action .checkout-btn{
+  width: 100%;
+  height: 50px;
+  padding: 2px 10px;
+  font-family: 'Source Code Pro', monospace;
+  font-weight: 700;
+  font-size: 25px;
+  text-align: center;
+  color: #000000;
+  background: #FF6F61;
+  border: none;
+  border-radius: 4px;
+  transition: all .3s;
+}
+.placeorder-action .checkout-btn:hover{
+  color: #FF6F61;
+  background: #000000;
+}
+  /* .cart-list-container {
     padding: 0;
     list-style-type: none;
     padding: 1rem;
@@ -71,4 +89,4 @@
     flex: 1 1;
     font-size: 2.5rem;
     text-align: right;
-  }
+  } */
