--- a/frontend/src/components/MainPages/Login/Login.css
+++ b/frontend/src/components/MainPages/Login/Login.css
@@ -22,6 +22,22 @@ user-select: none;
     margin-left: 0.2rem;
     text-decoration: underline;
 }
+
+.facebook{
+    align-items: center;
+}
+.facebook .img-fa{
+    margin-left: .5rem;
+    width: 1.9rem;
+    height: 1.9rem;
+    
+}
+.facebook .img-gg{
+    width: 3rem;
+    height: 3rem;
+
+}
+
 .form-container{
 display: flex;
 flex-direction: column;
