--- a/frontend/src/components/MainPages/Products/Product.css
+++ b/frontend/src/components/MainPages/Products/Product.css
@@ -26,6 +26,16 @@ border: 1px solid #353535;
 border-radius: 4px;
 transition: all .3s;
 }
+.product-view .product-filter select {
+width: 100%;
+height: 35px;
+padding: 0 15px;
+color: #999999;
+background: transparent;
+border: 1px solid #353535;
+border-radius: 4px;
+transition: all .3s;
+}
 
 .product-view .product-search input:focus {
 border-color: #FF6F61;
