--- a/frontend/src/components/PlaceOrder/PlaceOrder.css
+++ b/frontend/src/components/PlaceOrder/PlaceOrder.css
@@ -56,37 +56,6 @@
   color: #FF6F61;
   background: #000000;
 }
-  /* .cart-list-container {
-    padding: 0;
-    list-style-type: none;
-    padding: 1rem;
-    
-  }
-  .cart-list-container li img{
-    max-width: 10rem;
-    max-height: 10rem;
-  }
-  .cart-list-container li:first-child{
-    display: flex;
-    justify-content: space-between;
-    align-items: flex-end;
-  }
-  .cart-list-container li{
-    display: flex;
-    justify-content: space-between;
-  
-    padding-bottom: 1rem;
-    margin-bottom: 1rem;
-    border-bottom: .1rem #808080 solid;
-  }
-  .cart-image{
-    flex: 1 1;
-  }
-  .cart-name{
-    flex: 8 1;
-  }
-  .cart-price{
-    flex: 1 1;
-    font-size: 2.5rem;
-    text-align: right;
-  } */
+.payPal{
+  margin-left: 100px;
+}
